--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "node_modules/.bin/nodemon index.js",
-    "test": "node --test",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development node_modules/.bin/nodemon index.js",
+    "test": "cross-env NODE_ENV=test node --test",
     "lint": "eslint . --fix"
   },
   "author": "",
@@ -13,8 +13,10 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-async-errors": "^3.1.1",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.2",
     "morgan": "^1.10.0"
@@ -24,6 +26,7 @@
     "@stylistic/eslint-plugin-js": "^2.10.0",
     "eslint": "^9.13.0",
     "globals": "^15.11.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "supertest": "^7.0.0"
   }
 }
