--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -6,6 +6,7 @@
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development node_modules/.bin/nodemon index.js",
     "test": "cross-env NODE_ENV=test node --test",
+    "start:test": "cross-env NODE_ENV=test node index.js",
     "lint": "eslint . --fix"
   },
   "author": "",
